chore: updated npm packages

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
+    "pretty-quick": "pretty-quick",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "echo TODO BABEL_ENV=test jest",
     "start": "NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
@@ -16,69 +17,70 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^1.1.0",
-    "@material-ui/icons": "^1.1.0",
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "history": "^4.7.2",
-    "immutability-helper": "^2.7.0",
-    "lodash": "^4.17.10",
-    "prop-types": "^15.6.1",
-    "query-string": "^6.1.0",
-    "raven-js": "^3.25.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.4.0",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.3.0",
-    "uglifyjs-webpack-plugin": "^1.2.5"
+    "@material-ui/core": "~3.0.3",
+    "@material-ui/icons": "~3.0.1",
+    "axios": "~0.18.0",
+    "babel-polyfill": "~6.26.0",
+    "history": "~4.7.2",
+    "immutability-helper": "~2.7.1",
+    "lodash": "~4.17.10",
+    "prop-types": "~15.6.2",
+    "query-string": "~6.1.0",
+    "raven-js": "~3.27.0",
+    "react": "~16.5.0",
+    "react-dom": "~16.5.0",
+    "react-loadable": "~5.5.0",
+    "react-redux": "~5.0.7",
+    "react-router-dom": "~4.3.1",
+    "react-router-redux": "~5.0.0-alpha.9",
+    "redux": "~4.0.0",
+    "redux-actions": "~2.6.1",
+    "redux-saga": "~0.16.0",
+    "styled-components": "~3.4.6",
+    "uglifyjs-webpack-plugin": "~1.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-styled-components": "^1.5.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "json-loader": "^0.5.7",
-    "prettier": "^1.12.1",
-    "react-hot-loader": "^4.1.3",
-    "redux-devtools": "^3.4.1",
-    "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.4.0",
-    "redux-logger": "^3.0.6",
-    "redux-saga-tester": "^1.0.379",
-    "redux-testkit": "^1.0.6",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.9.1",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "babel-cli": "~6.26.0",
+    "babel-core": "~6.26.3",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-styled-components": "^1.6.4",
+    "babel-plugin-syntax-dynamic-import": "~6.18.0",
+    "babel-preset-env": "~1.7.0",
+    "babel-preset-react": "~6.24.1",
+    "babel-preset-stage-2": "~6.24.1",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-babel": "^5.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "~2.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "~3.2.0",
+    "jest": "^23.6.0",
+    "json-loader": "~0.5.7",
+    "prettier": "^1.14.2",
+    "pretty-quick": "^1.6.0",
+    "react-hot-loader": "^4.3.6",
+    "redux-devtools": "~3.4.1",
+    "redux-devtools-dock-monitor": "~1.1.3",
+    "redux-devtools-log-monitor": "~1.4.0",
+    "redux-logger": "~3.0.6",
+    "redux-saga-tester": "~1.0.379",
+    "redux-testkit": "~1.0.6",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.18.0",
+    "webpack-bundle-analyzer": "^3.0.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "~3.1.4",
+    "webpack-merge": "~4.1.2"
   },
   "_flowComment": "NOTE: for flow add also flow-bin and flow-typed",
   "_webpackServe": "TODO: replace webpack-dev-server with webpack-serve?"
