--- a/client/.eslintrc.yml
+++ b/client/.eslintrc.yml
@@ -1,4 +1,3 @@
----
 extends:
   - airbnb # TODO use airbnb-base instead?
   # NOTE: prettier disabled: https://github.com/prettier/prettier/issues/3437
@@ -11,7 +10,7 @@ env:
   mocha: true
   jest: true
 
-parser: "babel-eslint"
+parser: 'babel-eslint'
 parserOptions:
   ecmaVersion: 2017
 
@@ -26,23 +25,27 @@ rules:
   #   - error
   #   - singleQuote: true
   #     trailingComma: es5
-  arrow-parens: [2, "as-needed"]
+  arrow-parens: [2, 'as-needed']
   # single quotes
-  quotes: [2, "single"]
-  jsx-quotes: [2, "prefer-single"]
+  quotes: [2, 'single']
+  jsx-quotes: [2, 'prefer-single']
   # 2 space indentation
   indent: [2, 2]
   # Allow _function/variable names (to show privateness)
   no-underscore-dangle: 0
   # Commas always at the end of line
-  comma-style: [2, "last"]
-  comma-dangle: ["error", {
-    "arrays": "only-multiline",
-    "objects": "only-multiline",
-    "imports": "only-multiline",
-    "exports": "only-multiline",
-    "functions": "ignore",
-  }]
+  comma-style: [2, 'last']
+  comma-dangle:
+    [
+      'error',
+      {
+        'arrays': 'only-multiline',
+        'objects': 'only-multiline',
+        'imports': 'only-multiline',
+        'exports': 'only-multiline',
+        'functions': 'ignore',
+      },
+    ]
   # 80 char line length
   max-len: [2, 80, 1]
   # console is fine
@@ -69,7 +72,7 @@ rules:
 
   react/jsx-wrap-multilines: 0
   react/forbid-prop-types: 0
-  react/prefer-stateless-function: [2, { "ignorePureComponents": true }]
+  react/prefer-stateless-function: [2, { 'ignorePureComponents': true }]
   react/require-default-props: 0
   react/jsx-curly-spacing: 2
   react/jsx-indent-props: [2, 2]
@@ -80,5 +83,5 @@ rules:
   react/jsx-filename-extension:
     - 1
     - extensions:
-      - ".js"
-      - ".jsx"
+        - '.js'
+        - '.jsx'
