--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
+    "pretty-quick": "pretty-quick",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "unit": "mocha --require babel-core/register --recursive 'src/**/*.unit.js' 'test/**/*.unit.js'",
+    "unit": "mocha --require babel-core/register --recursive 'src/**/*.unit.js'",
     "test": "mocha --require babel-core/register --recursive \"src/**/${test_name:-*}.test.js\" \"test/**/${test_name:-*}.test.js\"",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
@@ -16,44 +17,45 @@
   },
   "_comment": "TODO upgrade koa-jwt. the latest breaks determineAuthMethod()",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "boom": "^7.1.1",
-    "bunyan": "^1.8.12",
-    "continuation-local-storage": "^3.2.1",
-    "jsonwebtoken": "^7.2.1",
-    "koa": "^2.5.1",
-    "koa-basic-auth": "^2.0.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-cache-control": "^2.0.0",
-    "koa-convert": "^1.2.0",
-    "koa-jwt": "^1.2.0",
-    "koa-router": "^7.3.0",
-    "lodash": "^4.17.10",
-    "pg-promise": "^7.4.0",
-    "raven": "^2.6.2",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
-    "uuid": "^3.2.1"
+    "babel-polyfill": "~6.26.0",
+    "babel-runtime": "~6.26.0",
+    "boom": "^7.2.0",
+    "bunyan": "~1.8.12",
+    "continuation-local-storage": "~3.2.1",
+    "jsonwebtoken": "~8.3.0",
+    "koa": "~2.5.3",
+    "koa-basic-auth": "~3.0.0",
+    "koa-bodyparser": "~4.2.1",
+    "koa-cache-control": "~2.0.0",
+    "koa-convert": "~1.2.0",
+    "koa-jwt": "~3.5.1",
+    "koa-router": "^7.4.0",
+    "lodash": "~4.17.10",
+    "pg-promise": "~8.4.6",
+    "raven": "~2.6.4",
+    "request": "~2.88.0",
+    "request-promise-native": "~1.0.5",
+    "uuid": "~3.3.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "mocha": "^5.1.1",
-    "nodemon": "^1.17.4",
-    "prettier": "^1.12.1"
+    "babel-cli": "~6.26.0",
+    "babel-core": "~6.26.3",
+    "babel-eslint": "~9.0.0",
+    "babel-plugin-transform-object-rest-spread": "~6.26.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-preset-env": "~1.7.0",
+    "babel-register": "~6.26.0",
+    "chai": "~4.1.2",
+    "chai-as-promised": "~7.1.1",
+    "eslint": "~5.5.0",
+    "eslint-config-airbnb-base": "~13.1.0",
+    "eslint-config-prettier": "~3.0.1",
+    "eslint-plugin-import": "~2.14.0",
+    "eslint-plugin-prettier": "~2.6.2",
+    "mocha": "^5.2.0",
+    "nodemon": "~1.18.4",
+    "prettier": "~1.14.2",
+    "pretty-quick": "^1.6.0"
   },
   "_flowComment": "NOTE: for flow add also flow-bin and flow-typed"
 }
