chore: refactored helm template

--- a/admin/config/nginx.conf
+++ b/admin/config/nginx.conf
@@ -17,7 +17,7 @@ http {
     server {
         listen 3334;
         listen [::]:3334;
-        server_name             local-stackdriver-agent.stackdriver.com;
+        server_name             localhost;
 
         # Serve static files
         root                    /build;
