--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "scripts": {
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
-    "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:server install-all:worker ",
+    "install-all": "npm-run-all install-all:admin install-all:client install-all:server install-all:worker ",
     "install-all:admin": "cd admin && npm install && npm run types-install",
-    "install-all:bot": "cd bot && npm install && npm run types-install",
     "install-all:client": "cd client && npm install && npm run types-install",
     "install-all:server": "cd server && npm install && npm run types-install",
     "install-all:worker": "cd worker && npm install && npm run types-install",
@@ -20,29 +19,25 @@
     "info:test": "npm run show-basic-auth && echo Usernames: 'admin', 'user' && echo && taito secrets:test | grep -A 1 'Showing\\|user.'",
     "info:stag": "npm run show-basic-auth",
     "info:prod": "npm run show-basic-auth",
-    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker ",
+    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker ",
     "lint:admin": "cd admin && npm run lint",
-    "lint:bot": "cd bot && npm run lint",
     "lint:client": "cd client && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
-    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker ",
+    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker ",
     "unit:admin": "cd admin && npm run unit",
-    "unit:bot": "cd bot && npm run unit",
     "unit:client": "cd client && npm run unit",
     "unit:server": "cd server && npm run unit",
     "unit:worker": "cd worker && npm run unit",
-    "test": "npm-run-all test:admin test:bot test:client test:server test:worker ",
+    "test": "npm-run-all test:admin test:client test:server test:worker ",
     "test:admin": "taito util-test:admin:${taito_env}",
-    "test:bot": "echo DISABLED taito util-test:bot:${taito_env}",
     "test:client": "taito util-test:client:${taito_env}",
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
     "_check-deps_comment": "TODO how to pass -u argument from check-deps to check-deps:TARGET?",
-    "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:bot {@}\" \"check-deps:client {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" -- ",
+    "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" -- ",
     "check-deps:root": "npm run _check-deps-script -- . ",
     "check-deps:admin": "npm run _check-deps-script -- admin ",
-    "check-deps:bot": "npm run _check-deps-script -- bot ",
     "check-deps:client": "npm run _check-deps-script -- client ",
     "check-deps:server": "npm run _check-deps-script -- server ",
     "check-deps:worker": "npm run _check-deps-script -- worker ",
