--- a/client/.eslintrc.yml
+++ b/client/.eslintrc.yml
@@ -50,6 +50,7 @@ rules:
   max-len: [2, 80, 1]
   # console is fine
   no-console: 0
+  import/prefer-default-export: 0
 
   # allow return assign to keep simple arrow functions concise
   no-return-assign: 0
