--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -1,110 +1,116 @@
-stack:
-  admin: admin
-  bot:
-  cache:
-  client: client
-  database: database
-  queue:
-  server: server
-  storage: storage
-  worker:
+global:
+  logFormat: stackdriver
+  logLevel: info    # trace, debug, info, warn, error, fatal
+  debug: 'false'
+  repository: ${taito_registry}
+  imagePullPolicy: ''
 
-# Common settings
+server-template:
+  # Ingress
+  ingress:
+    class: nginx
+    tls: true
+    maxBodySize: 1m
+    basicAuth:
+      enabled: true
+      htpasswdSecret: ${taito_project}-${taito_env}-basic-auth
+    domains:
+      - ${taito_domain}
 
-logLevel: info    # trace, debug, info, warn, error, fatal
-debug: 'false'
-repository: ${taito_registry}
-imagePullPolicy: ''
+  # Stack
+  services:
+    admin: true
+    client: true
+    cache: false
+    queue: false
+    server: true
+    storage: true
+    worker: false
 
-domains:
-  - ${taito_domain}
+  # Defaults
+  serviceDefaults:
+    path:
+    port: 80
+    tier: backend
+    livenessPath: /healthz
+    replicas: ${kubectl_replicas}
+    autoscale: false
+    minReplicas: 2
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 50
+    image: # 3rd party container image
+    env:
+      # Environment variables
+    secrets:
+      # Secrets
+    command:
+      # Command
 
-# Stack settings
+  # Services
 
-ingress:
-  basicAuth: true
-  class: nginx
-  maxBodySize: 1m
+  admin:
+    path: /admin
+    port: 3334
+    tier: frontend
 
-admin:
-  replicas: ${kubectl_replicas}
-  env:
-    SENTRY_PUBLIC_DSN: #sentryPublicDSN
+  client:
+    path: /
+    port: 3333
+    tier: frontend
 
-bot:
-  replicas: ${kubectl_replicas}
-  secrets:
-    ADMIN_PASSWORD: ${taito_project}-${taito_env}-admin.password
-    USER_PASSWORD: ${taito_project}-${taito_env}-user.password
-  env:
-    SENTRY_DSN: #sentryDSN
-    DEBUG: false
-    ENV: production
+  server:
+    path: /api
+    port: 3332
+    livenessPath: /infra/healthz
+    db:
+      instance: ${taito_zone}:${taito_provider_region}:${db_database_instance}
+      port: 5432
+      proxySecret: cloudsql-gserviceaccount.key
+    serviceAccount:
+      secret: ${taito_project}-${taito_env}-gserviceaccount.key
+    secrets:
+      S3_KEY_SECRET: ${taito_project}-${taito_env}-storage-gateway.secret
+      DATABASE_PASSWORD: ${taito_project}-${taito_env}-db-app.password
+    env:
+      # TODO remove ENV or set it automatically?
+      ENV: production
+      DEBUG: false
+      SENTRY_DSN: #sentryDSN
+      API_PORT: '3332'
+      API_BINDADDR: '0.0.0.0'
+      DATABASE_HOST: '127.0.0.1'
+      DATABASE_PORT: '5432'
+      DATABASE_NAME: ${db_database_name}
+      DATABASE_USER: ${db_database_name}_app
+      DATABASE_POOL_MIN: '5'
+      DATABASE_POOL_MAX: '10'
+      S3_URL: http://${taito_project}-storage:9000/
+      S3_REGION: ${taito_provider_region}
+      S3_BUCKET: ${taito_project}-${taito_env}
+      S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
-client:
-  replicas: ${kubectl_replicas}
-  env:
-    SENTRY_PUBLIC_DSN: #sentryPublicDSN
+  storage:
+    port: 9000
+    livenessDisabled: true # TODO remove
+    image: minio/minio
+    host: storage
+    region: ${taito_provider_region}
+    command:
+      - minio
+      - gateway
+      - gcs
+      - ${taito_resource_namespace}
+    serviceAccount:
+      secret: ${taito_project}-${taito_env}-gserviceaccount.key
+    secrets:
+      MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage-gateway.secret
+    env:
+      MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
 
-server:
-  replicas: ${kubectl_replicas}
-  secrets:
-    JWT_SECRET: ${taito_project}-${taito_env}-jwt.secret
-    ADMIN_PASSWORD: ${taito_project}-${taito_env}-admin.password
-    USER_PASSWORD: ${taito_project}-${taito_env}-user.password
-    S3_KEY_SECRET: ${taito_project}-${taito_env}-storage-gateway.secret
-  env:
-    SENTRY_DSN: #sentryDSN
-    DEBUG: false
-    # TODO remove ENV or set it automatically?
-    ENV: production
-    S3_URL: http://${taito_project}-storage:9000/
-    S3_REGION: ${taito_provider_region}
-    S3_BUCKET: ${taito_project}-${taito_env}
-    S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-
-worker:
-  replicas: ${kubectl_replicas}
-  secrets:
-    S3_KEY_SECRET: ${taito_project}-${taito_env}-storage-gateway.secret
-  env:
-    SENTRY_DSN: #sentryDSN
-    DEBUG: false
-    ENV: production
-    S3_URL: http://${taito_project}-storage:9000/
-    S3_REGION: ${taito_provider_region}
-    S3_BUCKET: ${taito_project}-${taito_env}
-    S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-
-database:
-  port: 5432
-  db: ${taito_zone}:${taito_provider_region}:${db_database_instance}
-  poolMin: 5
-  poolMax: 10
-
-# minio as storage gateway
-storage:
-  image: minio/minio
-  replicas: ${kubectl_replicas}
-  host: storage
-  region: ${taito_provider_region}
-  secrets:
-    MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage-gateway.secret
-  env:
-    MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
-
-cache:
-  image: redis:alpine
-  replicas: 1 # TODO multiple replicas as redis cluster
-
-queue:
-  image: rabbitmq:alpine
-  replicas: 1 # TODO multiple replicas as queue cluster
-
-# TODO configure resources
-# resources: {}
-  #  cpu: 100m
-  #  memory: 128Mi
-  #requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  # TODO configure resources
+  # resources: {}
+    #  cpu: 100m
+    #  memory: 128Mi
+    #requests:
+    #  cpu: 100m
+    #  memory: 128Mi
