--- a/server/.eslintrc.yml
+++ b/server/.eslintrc.yml
@@ -1,4 +1,3 @@
----
 extends:
   - airbnb-base
   - prettier
@@ -32,17 +31,22 @@ rules:
   no-underscore-dangle: 0
   # Commas always at the end of line
   comma-style: [2, "last"]
-  comma-dangle: ["error", {
-    "arrays": "only-multiline",
-    "objects": "only-multiline",
-    "imports": "only-multiline",
-    "exports": "only-multiline",
-    "functions": "ignore",
-  }]
+  comma-dangle:
+    [
+      "error",
+      {
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "only-multiline",
+        "exports": "only-multiline",
+        "functions": "ignore",
+      },
+    ]
   # 80 char line length
   max-len: [2, 80, 1]
   # console is fine
   no-console: 0
+  import/prefer-default-export: 0
 
   # allow assigning to function params because of koa ctx.body
   no-param-reassign: 0
