chore: updated kubernetes template to v1 and removed some obsolete stuff

--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -24,6 +24,7 @@ services:
     image: taitounited/taito-cli:latest
     restart: unless-stopped
     entrypoint: /bin/sh -c "cd /project && taito db-proxy:${taito_env} 5432"
+    user: taito
     networks:
       - test
     ports:
