--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,8 @@ RUN apk --no-cache add ca-certificates wget && \
 WORKDIR /client
 COPY ./package.json ./package-lock.* ./.flowconfi* /client/
 ENV NODE_ENV development
+ENV API_ROOT ''
+ENV API_URL /api
 RUN npm install --loglevel warn
 RUN npm run types-install
 COPY . /client
