--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
     "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
     "clean:storage": "if [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
-    "show-basic-auth": "echo '* Non-production basic auth credentials: TODO user / painipaini'",
-    "info:local": "npm run show-basic-auth && echo && echo Usernames: 'admin', 'user' && taito secrets | grep 'Showing\\|PASSWORD'",
-    "info:dev": "npm run show-basic-auth && echo && echo Usernames: 'admin', 'user' && taito secrets:dev | grep -A 1 'Showing\\|user.'",
-    "info:test": "npm run show-basic-auth && echo Usernames: 'admin', 'user' && echo && taito secrets:test | grep -A 1 'Showing\\|user.'",
-    "info:stag": "npm run show-basic-auth",
-    "info:prod": "npm run show-basic-auth",
+    "info:local": "cat docker-compose.yaml | grep '# SHOW ON INFO'",
+    "info_comment": "TODO autoconfirm on taito secrets:prod",
+    "info": "taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker ",
     "lint:admin": "cd admin && npm run lint",
     "lint:client": "cd client && npm run lint",
